add library view

--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>Main.qml</file>
         <file>CoreModel.qml</file>
+        <file>LibraryView.qml</file>
     </qresource>
 </RCC>
