Image add player

--- a/MediaPlayer/Plugins/Image/image.qrc
+++ b/MediaPlayer/Plugins/Image/image.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/image">
         <file>ImagePlaylist.qml</file>
+        <file>ImagePlayer.qml</file>
     </qresource>
 </RCC>
