--- a/MediaPlayer/UxComponent/ux.qrc
+++ b/MediaPlayer/UxComponent/ux.qrc
@@ -5,5 +5,12 @@
         <file>MediaHeader.qml</file>
         <file>MediaListItem.qml</file>
         <file>MediaBackground.qml</file>
+        <file>MediaWindow.qml</file>
+        <file>MediaList.qml</file>
+        <file>MediaCheckbox.qml</file>
+        <file>MediaCombobox.qml</file>
+        <file>MediaTextEdit.qml</file>
+        <file>MediaProgressBar.qml</file>
+        <file>MediaRadioButton.qml</file>
     </qresource>
 </RCC>
