--- a/MediaPlayer/Plugins/Image/image.qrc
+++ b/MediaPlayer/Plugins/Image/image.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/image">
         <file>ImagePlaylist.qml</file>
         <file>ImagePlayer.qml</file>
+        <file>ImageLibrairyPlaylist.qml</file>
     </qresource>
 </RCC>
