--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -4,5 +4,7 @@
         <file>CoreModel.qml</file>
         <file>LibraryView.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>View.qml</file>
+        <file>LibraryPopup.qml</file>
     </qresource>
 </RCC>
