--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -6,5 +6,6 @@
         <file>qtquickcontrols2.conf</file>
         <file>View.qml</file>
         <file>LibraryPopup.qml</file>
+        <file>ErrorPage.qml</file>
     </qresource>
 </RCC>
