add new playlist style

--- a/MediaPlayer/Plugins/Image/image.qrc
+++ b/MediaPlayer/Plugins/Image/image.qrc
@@ -3,5 +3,6 @@
         <file>ImagePlaylist.qml</file>
         <file>ImagePlayer.qml</file>
         <file>ImageLibrairyPlaylist.qml</file>
+        <file>ImageList.qml</file>
     </qresource>
 </RCC>
