--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -7,5 +7,6 @@
         <file>View.qml</file>
         <file>LibraryPopup.qml</file>
         <file>ErrorPage.qml</file>
+        <file>Settings.qml</file>
     </qresource>
 </RCC>
