[Rating] add icon

--- a/MediaPlayer/UxComponent/ux.qrc
+++ b/MediaPlayer/UxComponent/ux.qrc
@@ -15,5 +15,6 @@
         <file>MediaTabButton.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>Rating.qml</file>
+        <file>icon/rating_star.png</file>
     </qresource>
 </RCC>
