[Main] add menu bar

--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -8,5 +8,6 @@
         <file>LibraryPopup.qml</file>
         <file>ErrorPage.qml</file>
         <file>Settings.qml</file>
+        <file>MediaMenuBar.qml</file>
     </qresource>
 </RCC>
