Smart] extract group and rule from playlist

--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -10,5 +10,6 @@
         <file>MediaMenuBar.qml</file>
         <file>PlaylistView.qml</file>
         <file>SmartRule.qml</file>
+        <file>GroupRule.qml</file>
     </qresource>
 </RCC>
