[PlayslitView] base of view

--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -11,5 +11,6 @@
         <file>PlaylistView.qml</file>
         <file>SmartRule.qml</file>
         <file>GroupRule.qml</file>
+        <file>Node.qml</file>
     </qresource>
 </RCC>
