[List] move files

--- a/MediaPlayer/Core/View/qml.qrc
+++ b/MediaPlayer/Core/View/qml.qrc
@@ -12,5 +12,6 @@
         <file>SmartRule.qml</file>
         <file>GroupRule.qml</file>
         <file>Node.qml</file>
+        <file>PlaylistList.qml</file>
     </qresource>
 </RCC>
