--- a/MediaPlayer/UxComponent/ux.qrc
+++ b/MediaPlayer/UxComponent/ux.qrc
@@ -18,5 +18,6 @@
         <file>icon/rating_star.png</file>
         <file>StyleSheet.qml</file>
         <file>PlaylistList.qml</file>
+        <file>MediaMenu.qml</file>
     </qresource>
 </RCC>
