[☻Comics] displa-y preview

--- a/OMS/Plugins/Comics/comics.qrc
+++ b/OMS/Plugins/Comics/comics.qrc
@@ -3,5 +3,6 @@
         <file>ComicsView.qml</file>
         <file>ComicsPlaylist.qml</file>
         <file>ComicsSettings.qml</file>
+        <file>ComicsPreview.qml</file>
     </qresource>
 </RCC>
