[ComicsPlaylist}] add new playlist style

--- a/OMS/Plugins/Comics/comics.qrc
+++ b/OMS/Plugins/Comics/comics.qrc
@@ -5,4 +5,7 @@
         <file>ComicsSettings.qml</file>
         <file>ComicsPreview.qml</file>
     </qresource>
+    <qresource prefix="/">
+        <file>ComicsPlaylist.qml</file>
+    </qresource>
 </RCC>
