[ReadOrder] add new item

--- a/OMS/UxComponent/ux.qrc
+++ b/OMS/UxComponent/ux.qrc
@@ -19,5 +19,6 @@
         <file>StyleSheet.qml</file>
         <file>PlaylistList.qml</file>
         <file>MediaMenu.qml</file>
+        <file>OrderDisplay.qml</file>
     </qresource>
 </RCC>
