--- a/OMS/Plugins/Comics/comics.qrc
+++ b/OMS/Plugins/Comics/comics.qrc
@@ -5,7 +5,5 @@
         <file>ComicsSettings.qml</file>
         <file>ComicsPreview.qml</file>
     </qresource>
-    <qresource prefix="/">
-        <file>ComicsPlaylist.qml</file>
-    </qresource>
+    <qresource prefix="/"/>
 </RCC>
