--- a/OMS/UxComponent/ux.qrc
+++ b/OMS/UxComponent/ux.qrc
@@ -22,6 +22,8 @@
         <file>ButtonOrder.qml</file>
         <file>TagMenu.qml</file>
         <file>Bookmark.qml</file>
+        <file>GenericMediaProperties.qml</file>
+        <file>MediaProperties.qml</file>
     </qresource>
     <qresource prefix="/icons">
         <file>rating_star.png</file>
