[Properties] display multiple pages

--- a/OMS/Plugins/Comics/comics.qrc
+++ b/OMS/Plugins/Comics/comics.qrc
@@ -4,6 +4,7 @@
         <file>ComicsPlaylist.qml</file>
         <file>ComicsSettings.qml</file>
         <file>ComicsPreview.qml</file>
+        <file>ComicsProperties.qml</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
