--- a/OMS/UxComponent/ux.qrc
+++ b/OMS/UxComponent/ux.qrc
@@ -24,6 +24,9 @@
         <file>Bookmark.qml</file>
         <file>GenericMediaProperties.qml</file>
         <file>MediaProperties.qml</file>
+        <file>RepeatState.qml</file>
+        <file>ShuffleState.qml</file>
+        <file>PlayingState.qml</file>
     </qresource>
     <qresource prefix="/icons">
         <file>rating_star.png</file>
