[PlayBar] add playbar item

--- a/OMS/UxComponent/ux.qrc
+++ b/OMS/UxComponent/ux.qrc
@@ -24,6 +24,7 @@
         <file>Bookmark.qml</file>
         <file>GenericMediaProperties.qml</file>
         <file>MediaProperties.qml</file>
+        <file>PlayBar.qml</file>
         <file>RepeatState.qml</file>
         <file>ShuffleState.qml</file>
         <file>PlayingState.qml</file>
