[Audio] add playlist
play from playlist

--- a/OMS/Plugins/Audio/audio.qrc
+++ b/OMS/Plugins/Audio/audio.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/audio">
         <file>AudioPlayer.qml</file>
+        <file>AudioPlaylist.qml</file>
     </qresource>
 </RCC>
